--- a/20240227筆記.ipynb
+++ b/20240227筆記.ipynb
@@ -1602,12 +1602,308 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### list v.s. tuple"
+      ],
+      "metadata": {
+        "id": "THtBrh_rcg4G"
+      },
+      "id": "THtBrh_rcg4G"
+    },
+    {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "x = list('abcde')"
+      ],
       "metadata": {
         "id": "177TClWBW6VU"
       },
       "id": "177TClWBW6VU",
+      "execution_count": 55,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tx = tuple('abcde')"
+      ],
+      "metadata": {
+        "id": "jJXOL0ytcm6C"
+      },
+      "id": "jJXOL0ytcm6C",
+      "execution_count": 56,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(x)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UN2ijU7Oco6o",
+        "outputId": "d7262996-ba5b-4574-e101-55103112f774"
+      },
+      "id": "UN2ijU7Oco6o",
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "list"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 57
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(tx)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gTQJXvk8czuz",
+        "outputId": "2f21c698-52c6-42a7-adcc-642d5dbeaa00"
+      },
+      "id": "gTQJXvk8czuz",
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tuple"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 58
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JnLrMS_6c1VR",
+        "outputId": "87920826-a413-4a75-aed5-cf0300249e50"
+      },
+      "id": "JnLrMS_6c1VR",
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['a', 'b', 'c', 'd', 'e']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 59
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tx"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Nl-Ib_Hcc2Ly",
+        "outputId": "8189cc6b-aadd-4779-ba2c-b7ad816ae9b9"
+      },
+      "id": "Nl-Ib_Hcc2Ly",
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "('a', 'b', 'c', 'd', 'e')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 60
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x.append?"
+      ],
+      "metadata": {
+        "id": "rjIWACndc3KJ"
+      },
+      "id": "rjIWACndc3KJ",
+      "execution_count": 61,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tx.count?"
+      ],
+      "metadata": {
+        "id": "Vvgd8rc9dTWZ"
+      },
+      "id": "Vvgd8rc9dTWZ",
+      "execution_count": 62,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x[2]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "vLiO3j2qduJf",
+        "outputId": "f9ce5b5f-365d-4032-c42e-d478216e1cb4"
+      },
+      "id": "vLiO3j2qduJf",
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'c'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 63
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tx[2]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "ik54qkBNd8SN",
+        "outputId": "3168b9f5-564f-4cb1-b82f-8425613db4f4"
+      },
+      "id": "ik54qkBNd8SN",
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'c'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 64
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x[2] = 'abc'"
+      ],
+      "metadata": {
+        "id": "J9cpx3Uad9sP"
+      },
+      "id": "J9cpx3Uad9sP",
+      "execution_count": 65,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "W5P_y0wHeAnI",
+        "outputId": "cb0564b3-e41e-491f-e1bd-fe1bf820eb26"
+      },
+      "id": "W5P_y0wHeAnI",
+      "execution_count": 66,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['a', 'b', 'abc', 'd', 'e']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 66
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tx[2] = 'abc'"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 144
+        },
+        "id": "L_tvzK1ceBXX",
+        "outputId": "b609b798-4fa3-4c24-eb75-a39883de25be"
+      },
+      "id": "L_tvzK1ceBXX",
+      "execution_count": 67,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "'tuple' object does not support item assignment",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-67-028a92806e60>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'abc'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "WHRE_u8neIiF"
+      },
+      "id": "WHRE_u8neIiF",
       "execution_count": null,
       "outputs": []
     }
