--- a/20240227筆記.ipynb
+++ b/20240227筆記.ipynb
@@ -1898,12 +1898,235 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### for v.s. list"
+      ],
+      "metadata": {
+        "id": "Z4Y0xsn0fZpG"
+      },
+      "id": "Z4Y0xsn0fZpG"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in range(3):\n",
+        "  print(i)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WHRE_u8neIiF",
+        "outputId": "f1a20560-ddcb-4ae1-8a12-896e43f899b0"
+      },
+      "id": "WHRE_u8neIiF",
+      "execution_count": 68,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "1\n",
+            "2\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0kmZQgK_fiE7",
+        "outputId": "3c252629-80fb-4c5a-8c15-a361fbd2bcff"
+      },
+      "id": "0kmZQgK_fiE7",
+      "execution_count": 69,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['a', 'b', 'abc', 'd', 'e']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 69
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in x:\n",
+        "  print(i)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "t8mrDYfFfrSl",
+        "outputId": "263a282c-0d1a-4aab-f91c-c14c6e5d0364"
+      },
+      "id": "t8mrDYfFfrSl",
+      "execution_count": 70,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "a\n",
+            "b\n",
+            "abc\n",
+            "d\n",
+            "e\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### for v.s. dict"
+      ],
+      "metadata": {
+        "id": "BTEWlfVRgEZL"
+      },
+      "id": "BTEWlfVRgEZL"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "d"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YvkQoZIWfyh5",
+        "outputId": "40ce201d-d165-47aa-9855-2db4f47e86a9"
+      },
+      "id": "YvkQoZIWfyh5",
+      "execution_count": 71,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'cat': '貓咪', 'dog': '狗狗'}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 71
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "d['rabbit'] = '兔兔'"
+      ],
+      "metadata": {
+        "id": "wv4RlED1gIIy"
+      },
+      "id": "wv4RlED1gIIy",
+      "execution_count": 72,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "d"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2XR6z4u8gMXF",
+        "outputId": "76832c7e-10bb-495d-af61-b9a4b93146f0"
+      },
+      "id": "2XR6z4u8gMXF",
+      "execution_count": 73,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'cat': '貓咪', 'dog': '狗狗', 'rabbit': '兔兔'}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 73
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in d:\n",
+        "  print(i)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ewSptZ50gNp9",
+        "outputId": "af9b3ae4-17a1-4a7b-90fa-2650d2623ba7"
+      },
+      "id": "ewSptZ50gNp9",
+      "execution_count": 74,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "cat\n",
+            "dog\n",
+            "rabbit\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in d:\n",
+        "  print(d[i])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "p1aR1ej7gagE",
+        "outputId": "3c26dd58-fdd9-4076-d111-ea768e13fcf2"
+      },
+      "id": "p1aR1ej7gagE",
+      "execution_count": 75,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "貓咪\n",
+            "狗狗\n",
+            "兔兔\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "WHRE_u8neIiF"
+        "id": "Fq-nXLqJgrMa"
       },
-      "id": "WHRE_u8neIiF",
+      "id": "Fq-nXLqJgrMa",
       "execution_count": null,
       "outputs": []
     }
