--- a/20240227筆記.ipynb
+++ b/20240227筆記.ipynb
@@ -2121,12 +2121,200 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### 'in' operator"
+      ],
+      "metadata": {
+        "id": "SeF86e9jhU00"
+      },
+      "id": "SeF86e9jhU00"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Fq-nXLqJgrMa",
+        "outputId": "f9c3357a-6a79-4d9c-c521-3d922d70ad54"
+      },
+      "id": "Fq-nXLqJgrMa",
+      "execution_count": 76,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['a', 'b', 'abc', 'd', 'e']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 76
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "'a' in x"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QsMgCvz2hXfB",
+        "outputId": "eeb77b13-91d1-4e49-94d9-f11eb8c2586f"
+      },
+      "id": "QsMgCvz2hXfB",
+      "execution_count": 77,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 77
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "'abc' in x"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "o0ZAphjthZcj",
+        "outputId": "98ede787-2c6d-4f6b-f3dd-da4e81cb6647"
+      },
+      "id": "o0ZAphjthZcj",
+      "execution_count": 78,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 78
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "'c' in x"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JWN8iJdmhbmX",
+        "outputId": "09084f42-21bb-42e1-8af5-52c16ed7562a"
+      },
+      "id": "JWN8iJdmhbmX",
+      "execution_count": 79,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 79
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "s = \"台股今 (27) 日早盤一度站回萬九大關，不過創下新高後，台積電 (2330-TW)(TSM-US) 領跌翻黑，AI 股全面倒地，指數急速下墜重挫近 200 點，最低至 18752 點，隨著金融股逆勢撐腰，指數跌幅收斂，終場收在 18854.41 點，下跌 93.64 點或 0.49%，守住 5 日線，成交量 4225.24 億元，三大法人同站賣方，合計賣超 199.13 億元。\""
+      ],
+      "metadata": {
+        "id": "N6B5cOBchdaT"
+      },
+      "id": "N6B5cOBchdaT",
+      "execution_count": 80,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "s"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 71
+        },
+        "id": "i-MR20KEh6Fr",
+        "outputId": "2f183984-6cf0-4f46-bf79-2f1e9b13da5f"
+      },
+      "id": "i-MR20KEh6Fr",
+      "execution_count": 82,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'台股今 (27) 日早盤一度站回萬九大關，不過創下新高後，台積電 (2330-TW)(TSM-US) 領跌翻黑，AI 股全面倒地，指數急速下墜重挫近 200 點，最低至 18752 點，隨著金融股逆勢撐腰，指數跌幅收斂，終場收在 18854.41 點，下跌 93.64 點或 0.49%，守住 5 日線，成交量 4225.24 億元，三大法人同站賣方，合計賣超 199.13 億元。'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 82
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "'台積電' in s"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8CCJFNMLh6wX",
+        "outputId": "17c9bd2e-4cff-4f66-89d4-9832b382be42"
+      },
+      "id": "8CCJFNMLh6wX",
+      "execution_count": 83,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 83
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "Fq-nXLqJgrMa"
+        "id": "WY4nPmJ1h_Kt"
       },
-      "id": "Fq-nXLqJgrMa",
+      "id": "WY4nPmJ1h_Kt",
       "execution_count": null,
       "outputs": []
     }
