--- a/20240227筆記.ipynb
+++ b/20240227筆記.ipynb
@@ -2309,12 +2309,152 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### 綜合練習"
+      ],
+      "metadata": {
+        "id": "bCAjNFz8iX26"
+      },
+      "id": "bCAjNFz8iX26"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### 字串的運算"
+      ],
+      "metadata": {
+        "id": "a1FTTJm1i2Z0"
+      },
+      "id": "a1FTTJm1i2Z0"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "'*' * 5"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "WY4nPmJ1h_Kt",
+        "outputId": "e997bac8-02a4-4eb7-f6c3-5254c2cb4225"
+      },
+      "id": "WY4nPmJ1h_Kt",
+      "execution_count": 84,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'*****'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 84
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "'*' + '+'"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "A8MnkMVdi7Gk",
+        "outputId": "d7824982-3b5f-480c-e8bf-1004fc17fa1d"
+      },
+      "id": "A8MnkMVdi7Gk",
+      "execution_count": 85,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'*+'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 85
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in range(5):\n",
+        "  print(i)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wbLYjDcji-Vy",
+        "outputId": "794b2805-3a03-4de0-f1b3-6c29603007ca"
+      },
+      "id": "wbLYjDcji-Vy",
+      "execution_count": 86,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in range(5):\n",
+        "  print('*'*i)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PFQwEQ_MjCdQ",
+        "outputId": "f75d2139-6c21-4434-b795-d786a85400f2"
+      },
+      "id": "PFQwEQ_MjCdQ",
+      "execution_count": 87,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "*\n",
+            "**\n",
+            "***\n",
+            "****\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "WY4nPmJ1h_Kt"
+        "id": "SrOXkTSljHPM"
       },
-      "id": "WY4nPmJ1h_Kt",
+      "id": "SrOXkTSljHPM",
       "execution_count": null,
       "outputs": []
     }
