--- a/20240227筆記.ipynb
+++ b/20240227筆記.ipynb
@@ -2450,11 +2450,40 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "for i in range(5):\n",
+        "  print(2*i+1)"
+      ],
       "metadata": {
-        "id": "SrOXkTSljHPM"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SrOXkTSljHPM",
+        "outputId": "0efa0b9b-90b4-4cf8-9323-1c54da2b06a5"
       },
       "id": "SrOXkTSljHPM",
+      "execution_count": 88,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "3\n",
+            "5\n",
+            "7\n",
+            "9\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "x_DyTwkWjtec"
+      },
+      "id": "x_DyTwkWjtec",
       "execution_count": null,
       "outputs": []
     }
