--- a/20240227筆記.ipynb
+++ b/20240227筆記.ipynb
@@ -2479,11 +2479,113 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "for i in range(5):\n",
+        "  print((2*i+1)*'*')"
+      ],
       "metadata": {
-        "id": "x_DyTwkWjtec"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "x_DyTwkWjtec",
+        "outputId": "db8692a6-3dac-41c9-c56d-4259c29fb544"
       },
       "id": "x_DyTwkWjtec",
+      "execution_count": 89,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "*\n",
+            "***\n",
+            "*****\n",
+            "*******\n",
+            "*********\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in range(5):\n",
+        "  print((5-i)*' '+(2*i+1)*'*')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oJukGuPQnMkk",
+        "outputId": "6c1cb4a7-ff2c-408d-897e-13f2a7d1500e"
+      },
+      "id": "oJukGuPQnMkk",
+      "execution_count": 92,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "     *\n",
+            "    ***\n",
+            "   *****\n",
+            "  *******\n",
+            " *********\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def pyramid(n):\n",
+        "  for i in range(n):\n",
+        "    print((n-i)*' '+(2*i+1)*'*')"
+      ],
+      "metadata": {
+        "id": "RaNaV3MVnSOb"
+      },
+      "id": "RaNaV3MVnSOb",
+      "execution_count": 102,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pyramid(7)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lYz_s7fVoGtt",
+        "outputId": "54bf415b-17a5-4939-d885-f6e825ab9410"
+      },
+      "id": "lYz_s7fVoGtt",
+      "execution_count": 105,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "       *\n",
+            "      ***\n",
+            "     *****\n",
+            "    *******\n",
+            "   *********\n",
+            "  ***********\n",
+            " *************\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "T00Np6_EoUGn"
+      },
+      "id": "T00Np6_EoUGn",
       "execution_count": null,
       "outputs": []
     }
