--- a/20240227筆記.ipynb
+++ b/20240227筆記.ipynb
@@ -2580,12 +2580,60 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### input() v.s. print()"
+      ],
+      "metadata": {
+        "id": "KhKIrNNVpqAZ"
+      },
+      "id": "KhKIrNNVpqAZ"
+    },
+    {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "input?"
+      ],
       "metadata": {
         "id": "T00Np6_EoUGn"
       },
       "id": "T00Np6_EoUGn",
+      "execution_count": 106,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = input('請輸入一個數字:')\n",
+        "print('你剛剛輸入', x)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "O6H3wxwhp1sN",
+        "outputId": "a87d1177-dea5-4d38-b00d-b07cca326441"
+      },
+      "id": "O6H3wxwhp1sN",
+      "execution_count": 107,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "請輸入一個數字:10\n",
+            "你剛剛輸入 10\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "51g8-JQTqILt"
+      },
+      "id": "51g8-JQTqILt",
       "execution_count": null,
       "outputs": []
     }
