--- a/20240227筆記.ipynb
+++ b/20240227筆記.ipynb
@@ -2629,12 +2629,192 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "x = input('請輸入一個數字:')\n",
+        "type(x)"
+      ],
       "metadata": {
-        "id": "51g8-JQTqILt"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "51g8-JQTqILt",
+        "outputId": "280adedd-16ce-46d3-d7db-5e260987d5f7"
       },
       "id": "51g8-JQTqILt",
-      "execution_count": null,
+      "execution_count": 108,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "請輸入一個數字:10\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "str"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 108
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "3kUPIUueqlJM",
+        "outputId": "5083b117-8183-40cc-a6bb-8311a4024870"
+      },
+      "id": "3kUPIUueqlJM",
+      "execution_count": 109,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'10'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 109
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in range(x):\n",
+        "  print(i)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 162
+        },
+        "id": "vM9hofL1qvWn",
+        "outputId": "17000ba3-fb14-40a1-a718-b9eef8a9ee16"
+      },
+      "id": "vM9hofL1qvWn",
+      "execution_count": 110,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "'str' object cannot be interpreted as an integer",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-110-1a6434f44229>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m   \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mTypeError\u001b[0m: 'str' object cannot be interpreted as an integer"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(x)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_baRigIPq0fb",
+        "outputId": "3e9950c8-4061-4821-ac45-a51271ffb4ff"
+      },
+      "id": "_baRigIPq0fb",
+      "execution_count": 111,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "str"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 111
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(int(x))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "y6zEnBBhrMNl",
+        "outputId": "63096273-53d0-48d0-fe14-cc9de345277f"
+      },
+      "id": "y6zEnBBhrMNl",
+      "execution_count": 112,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "int"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 112
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n = input('請輸入金字塔高度: ')\n",
+        "pyramid(int(n))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MxuOFqhlrNp_",
+        "outputId": "7769f194-0929-4d99-aff6-4002bf9dd3d6"
+      },
+      "id": "MxuOFqhlrNp_",
+      "execution_count": 114,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "請輸入金字塔高度: 5\n",
+            "     *\n",
+            "    ***\n",
+            "   *****\n",
+            "  *******\n",
+            " *********\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "MyhZzRlrrpvt"
+      },
+      "id": "MyhZzRlrrpvt",
+      "execution_count": 114,
       "outputs": []
     }
   ],
