--- a/20240227筆記.ipynb
+++ b/20240227筆記.ipynb
@@ -3041,11 +3041,173 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "!pip install geocoder"
+      ],
       "metadata": {
-        "id": "DgKsbAzvuTpz"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DgKsbAzvuTpz",
+        "outputId": "4ba940e9-57dc-458b-eee3-3abd34e8e265"
       },
       "id": "DgKsbAzvuTpz",
+      "execution_count": 119,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: geocoder in /usr/local/lib/python3.10/dist-packages (1.38.1)\n",
+            "Requirement already satisfied: click in /usr/local/lib/python3.10/dist-packages (from geocoder) (8.1.7)\n",
+            "Requirement already satisfied: future in /usr/local/lib/python3.10/dist-packages (from geocoder) (0.18.3)\n",
+            "Requirement already satisfied: ratelim in /usr/local/lib/python3.10/dist-packages (from geocoder) (0.1.6)\n",
+            "Requirement already satisfied: requests in /usr/local/lib/python3.10/dist-packages (from geocoder) (2.31.0)\n",
+            "Requirement already satisfied: six in /usr/local/lib/python3.10/dist-packages (from geocoder) (1.16.0)\n",
+            "Requirement already satisfied: decorator in /usr/local/lib/python3.10/dist-packages (from ratelim->geocoder) (4.4.2)\n",
+            "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.10/dist-packages (from requests->geocoder) (3.3.2)\n",
+            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.10/dist-packages (from requests->geocoder) (3.6)\n",
+            "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.10/dist-packages (from requests->geocoder) (2.0.7)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.10/dist-packages (from requests->geocoder) (2024.2.2)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import geocoder"
+      ],
+      "metadata": {
+        "id": "VMUscQwju4cu"
+      },
+      "id": "VMUscQwju4cu",
+      "execution_count": 120,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "geocoder.osm('台中市').latlng"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7P9LzCXdvGAl",
+        "outputId": "02456ac4-63de-4596-8731-764eb8728e4f"
+      },
+      "id": "7P9LzCXdvGAl",
+      "execution_count": 121,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[24.163162, 120.6478282]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 121
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import requests\n",
+        "\n",
+        "def geocoding(address):\n",
+        "  # OpenStreetMap的地理編碼API網址\n",
+        "  url = \"https://nominatim.openstreetmap.org/search\"\n",
+        "\n",
+        "  # 台中市的查詢參數\n",
+        "  params = {\n",
+        "      \"q\": address,\n",
+        "      \"format\": \"json\",\n",
+        "  }\n",
+        "\n",
+        "  # 向API發送GET請求\n",
+        "  response = requests.get(url, params=params, verify=False)\n",
+        "\n",
+        "  # 檢查請求是否成功\n",
+        "  if response.status_code == 200:\n",
+        "      # 解析API回應的JSON數據\n",
+        "      data = response.json()\n",
+        "\n",
+        "      # 檢查是否有找到地點\n",
+        "      if data:\n",
+        "          # 提取第一個找到的地點的經緯度\n",
+        "          lat = data[0][\"lat\"]\n",
+        "          lon = data[0][\"lon\"]\n",
+        "\n",
+        "          print(f\"{address}的經度：{lat}\")\n",
+        "          print(f\"{address}的緯度：{lon}\")\n",
+        "          return lat, lon\n",
+        "      else:\n",
+        "          print(\"找不到台中市的地點。\")\n",
+        "          return None\n",
+        "  else:\n",
+        "      print(\"發生錯誤，HTTP狀態碼：\", response.status_code)\n",
+        "      return None\n"
+      ],
+      "metadata": {
+        "id": "oX7Nal1bvLNW"
+      },
+      "id": "oX7Nal1bvLNW",
+      "execution_count": 125,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "geocoding('台北市')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "M4d0p1XYv9O8",
+        "outputId": "f3e8517c-c6b0-4181-ab6e-5d016d4f0bcd"
+      },
+      "id": "M4d0p1XYv9O8",
+      "execution_count": 126,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "台北市的經度：25.0375198\n",
+            "台北市的緯度：121.5636796\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.10/dist-packages/urllib3/connectionpool.py:1100: InsecureRequestWarning: Unverified HTTPS request is being made to host 'nominatim.openstreetmap.org'. Adding certificate verification is strongly advised. See: https://urllib3.readthedocs.io/en/latest/advanced-usage.html#tls-warnings\n",
+            "  warnings.warn(\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "('25.0375198', '121.5636796')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 126
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Liu7V6jRwd88"
+      },
+      "id": "Liu7V6jRwd88",
       "execution_count": null,
       "outputs": []
     }
